Fix console contrast

--- a/less/style.less
+++ b/less/style.less
@@ -248,7 +248,7 @@ table.progress-bar {
   color: @color-red;
 }
 
-.console-output, .console-output pre {
+.console-output pre {
   position: relative;
   font-family: 'Roboto Mono', Menlo, monospace !important;
   font-size: 12px;
